css/style.production.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v8.4.14,
* Autoprefixer: v10.4.7
* Browsers: last 2 version
*/

/*
Colors used

Text Color: #ECE9E1;
Primary Color: #013065;
Secondary Color: #9B6600;
*/

/* TODO: ask tutor why this did not work*/
$primary-font-family: "Roboto", Arial;
$primary-font-weight: 400;
$secondary-font-weight: 700;


*{
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
}

footer{
    font-family: "Roboto", Arial;
    font-weight: 400;
    font-size: 14px;
}

body{
    font-family: "Roboto", Arial;
    font-weight: 400;
    font-size: 16px;
    line-height: 1.2;
}

h1{
    font-size: 30px;
    font-weight: 700;
}

h2{
    font-size: 24px;
    font-weight: 700;
}

h3{
    font-size: 18px;
    font-weight: 700;
}

a:visited{
    color: #489c79;
}

a:hover, a:focus{
    text-decoration: none;
}

a:active{
    color: #05676e;
}

button
{
    border:none;
    display: inline-block;
    font-family: inherit;
    background-color: #013065;
    color: #fff;
    text-decoration: none;
    padding: 10px;
    border-radius: 3px;
    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
    -webkit-transition: 0.9s opacity;
    transition: 0.9s opacity;
}

.button
{
    border:none;
    display: inline-block;
    font-family: inherit;
    background-color: #013065;
    color: #fff;
    text-decoration: none;
    padding: 10px;
    border-radius: 3px;
    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
    -webkit-transition: 0.9s opacity;
    transition: 0.9s opacity;
}

button:hover,
button:focus,
.button:hover,
.button:focus
{
    cursor: pointer;
    opacity: 0.8;
}

.profile{
    max-width: 700px;
    margin: 0 auto;
}

.profile__portrait{
    float: left;
    margin-right: 40px;
    border-radius: 50%;
    width: 250px;
}

.page-header{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    width: 100%;
    height: auto;
    padding: 20px;
    border-bottom:1px solid grey;
}

.page-header__item{
    -webkit-box-flex: 0;
        -ms-flex: 0 1 120px;
            flex: 0 1 120px;
}

.page-header__item:first-child{
    min-width: 200px;
    max-height: 65px;
}

.page-header__item:last-child{
    -webkit-box-flex: 1;
        -ms-flex-positive: 1;
            flex-grow: 1;
    text-align: right;
    /*align-self: center; */
}

.navigation-list{
    list-style-type: none;
}

.navigation-list li{
    display: inline-block;
    margin-left: 15px;
}

.page-footer{
    clear:both;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    text-align: center;
}

/*.project-list{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap: 20px;
}
*/

/* start grid fallback */
.project-list__item{
    display: inline-block;
    width:33%
}
/* end grid fallback*/

@supports (display: grid){
    .project-list{
        display: -ms-grid;
        display: grid;
        -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
        grid-template-columns: 1fr 1fr 1fr;
        grid-gap: 20px;
        margin: 0;
    }
    .project-list__item{
        background-color: lightgray;
        width: auto;
        min-height: auto;
        margin: 0;
    }
    .project-list__item:last-child{
        -ms-grid-column: 3;
        grid-column: 3/3;
        -ms-grid-row: 1;
        -ms-grid-row-span: 2;
        grid-row: 1/3;
    }
}

@media all and (max-width: 500px){
    .project-list{
        -ms-grid-columns: 1fr;
        grid-template-columns: 1fr;
    }
}

@media all and (min-width:500px) and (max-width:750px){
    .project-list{
        -ms-grid-columns: 1fr 20px 1fr;
        grid-template-columns: 1fr 1fr;
    }
}

@media all and (max-width:750px){
    .project-list{
        grid-gap:10px;
    }
    .project-list__item:last-child{
        grid-column: auto / auto;
        grid-row: auto / auto;
    }
    h1{
        font-size: 22px;
    }
}

@-webkit-keyframes color-change {
  0% {
    fill: #edc655;
  }
  50% {
    fill: #fcffad;
  }
  100% {
    fill: #f76414;
  }
}

@keyframes color-change {
  0% {
    fill: #edc655;
  }
  50% {
    fill: #fcffad;
  }
  100% {
    fill: #f76414;
  }
}
.sun{
    -webkit-animation: 4s color-change infinite alternate linear;
            animation: 4s color-change infinite alternate linear;
}

@-webkit-keyframes cloud-move {
  from {
    -webkit-transform: translate(0, 5px);
            transform: translate(0, 5px);
  }
  to {
    -webkit-transform: translate(100px, 5px);
            transform: translate(100px, 5px);
  }
}

@keyframes cloud-move {
  from {
    -webkit-transform: translate(0, 5px);
            transform: translate(0, 5px);
  }
  to {
    -webkit-transform: translate(100px, 5px);
            transform: translate(100px, 5px);
  }
}

.cloud-middle{
-webkit-animation: 20s cloud-move infinite alternate linear;
        animation: 20s cloud-move infinite alternate linear;
}

@-webkit-keyframes cloud-move-reverse {
  from {
    -webkit-transform: translate(20px, 1px);
            transform: translate(20px, 1px);
  }
  to {
    -webkit-transform: translate(-100px, 1px);
            transform: translate(-100px, 1px);
  }
}

@keyframes cloud-move-reverse {
  from {
    -webkit-transform: translate(20px, 1px);
            transform: translate(20px, 1px);
  }
  to {
    -webkit-transform: translate(-100px, 1px);
            transform: translate(-100px, 1px);
  }
}

.cloud-up{
    -webkit-animation: 30s cloud-move-reverse infinite alternate linear;
            animation: 30s cloud-move-reverse infinite alternate linear;
}

@-webkit-keyframes cloud-move-reverse-down{
    from {
        -webkit-transform: translate(0, 3px);
                transform: translate(0, 3px)
    }
    to {
        -webkit-transform: translate(-20px, 3px);
                transform: translate(-20px, 3px)
    }
}

@keyframes cloud-move-reverse-down{
    from {
        -webkit-transform: translate(0, 3px);
                transform: translate(0, 3px)
    }
    to {
        -webkit-transform: translate(-20px, 3px);
                transform: translate(-20px, 3px)
    }
}

.cloud-down{
    -webkit-animation: 15s cloud-move-reverse-down infinite alternate linear;
            animation: 15s cloud-move-reverse-down infinite alternate linear;
}

.about-me-content{
    margin: 0 auto;
    display:block;
    max-width: 800px;
}

.about-me-content-summary{
    margin: 0 auto;
    text-align: center;
}

.about-me-content-summary table{
    margin-left: auto;
    margin-right: auto;
}
.about-me-content_image{
   min-width: auto;
   max-width: 150%;

}

